quick sweep though slide deck

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -136,3 +136,4 @@ $bootstrap-primary: #6f5499;
 $inuit-primary: #4a8ec2;
 $toolkit-primary: #ff0065;
 $compass-primary: #fb292d;
+$caffeinatedlabs-primary: #ef4035;
