--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -2,8 +2,8 @@
 	<h1>Document inline.</h1>
 </section>
 
+
 <section>
-	<h1>Document inline.</h1>
 	<div class="mine">
 		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-mine.jpg" width="" height="">
 	</div>
@@ -11,6 +11,11 @@
 	<br>
 	<div class="mine fragment" data-fragment-index="0">
 		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-mixin-mine.jpg" width="" height="">
+	</div>
+	<br>
+	<br>
+	<div class="mine fragment" data-fragment-index="1">
+		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-element-group-mine.jpg" width="" height="">
 	</div>
 </section>
 
