--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -1,4 +1,8 @@
 <section>
+	<h1>Use objects for configs.</h1>
+</section>
+
+<section>
 	<h1 class="fragment" data-fragment-index="0">Use objects for configs.</h1>
 
 	<div class="each-on-top-of">
@@ -7,7 +11,7 @@
 		</div>
 
 		<div class="each toolkit fragment" data-fragment-index="0">
-			<img src="{{ SP.DIR_IMAGES }}/four-toolkit.jpg" height="" width="">
+			<img src="{{ SP.DIR_IMAGES }}/four-toolkit.jpg" height="" width="720">
 		</div>
 	</div>
 
