--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -3,15 +3,22 @@
 </section>
 
 <section>
-	<h1>Use a debug flag.</h1>
+	<h1 class="fragment" data-fragment-index="0">Use a debug flag.</h1>
+
+	<div class="inuit">
+		<img src="{{ SP.DIR_IMAGES }}/fourteen-debug-config-inuit.jpg" width="" height="">
+	</div>
 	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/fourteen-debug-inuit.jpg" width="" height="">
 	</div>
+
 	<br>
 	<br>
-	<div class="improved fragment" data-fragment-index="1">
+
+	<div class="improved fragment" data-fragment-index="0">
 		<img src="{{ SP.DIR_IMAGES }}/fourteen-improved.jpg" width="" height="">
 	</div>
+
 </section>
 
 
