--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -1,15 +1,21 @@
-<h1 class="fragment" data-fragment-index="0">Format your mixins so they are easy to read.</h1>
-<div class="mine-and-theirs--diagonal">
-	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/nineteen-mine.jpg" height="" width="">
-	</div>
+<section>
+	<h1>Format your mixin parameters<br>so they are <em>easy</em> to read.</h1>
+</section>
 
-	<div class="compass fragment" data-fragment-index="0">
-		<!--<div class="inuit">-->
-		<img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="466">
-	</div>
-</div>
 
+<section>
+	<h1 class="fragment" data-fragment-index="0">Format your mixin parameters<br>so they are <em>easy</em> to read.</h1>
+	<div class="mine-and-theirs--diagonal">
+		<div class="first mine">
+			<img src="{{ SP.DIR_IMAGES }}/nineteen-mine.jpg" height="" width="">
+		</div>
+
+		<div class="second compass fragment" data-fragment-index="0">
+			<!--<div class="inuit">-->
+			<img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="466">
+		</div>
+	</div>
+</section>
 
 
 <aside class="notes">
