--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,22 +1,28 @@
-<h1 class="fragment" data-fragment-index="1">Chain import statements.</h1>
+<section>
+	<h1>Chain import statements.</h1>
+</section>
 
-<div class="mine-and-theirs--diagonal">
-	<div class="mine">
-		<div class="side-by-side">
-			<div class="side">
-				<img src="{{ SP.DIR_IMAGES }}/one-mine.jpg" height="" width="">
+<section>
+	<h1 class="fragment" data-fragment-index="1">Chain import statements.</h1>
+
+	<div class="mine-and-theirs--diagonal">
+		<div class="first ">
+			<div class="side-by-side">
+				<div class="side mine">
+					<img src="{{ SP.DIR_IMAGES }}/one-mine.jpg" height="" width="">
+				</div>
+				<div class="side--right fragment" data-fragment-index="0">
+					<img src="{{ SP.DIR_IMAGES }}/one-script-mine.jpg" height="" width="480">
+				</div>
 			</div>
-			<div class="side--right fragment" data-fragment-index="0">
-				<img src="{{ SP.DIR_IMAGES }}/one-script-mine.jpg" height="" width="480">
-			</div>
+
 		</div>
 
+		<div class="second foundation fragment" data-fragment-index="1">
+			<img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800">
+		</div>
 	</div>
-
-	<div class="foundation fragment" data-fragment-index="1">
-		<img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800">
-	</div>
-</div>
+</section>
 
 
 <aside class="notes">
