--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -3,6 +3,8 @@
 </section>
 
 <section>
+	<h1 class="fragment" data-fragment-index="2">Use lots of Sass Partials.</h1>
+
 	<div class="each-columns">
 		<div class="each foundation fragment" data-fragment-index="0">
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-foundation.jpg" height="" width="">
