--- a/src/templates/slides/twenty-one.hbs
+++ b/src/templates/slides/twenty-one.hbs
@@ -1,4 +1,6 @@
-<h1>Read the Framework code.</h1>
+<h1>Read some Framework code.</h1>
 
-<h1>elise.chant@gmail.com</h1>
-<h1>@elisechant</h1>
+<address>
+	<p>elise.chant@gmail.com</p>
+	<p>@elisechant</p>
+</address>
