--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -1,14 +1,20 @@
-<h1 class="fragment" data-fragment-index="0">Grammar proof your selectors.</h1>
+<section>
+	<h1>Grammar proof your selectors.</h1>
+</section>
 
-<div class="mine-and-theirs--diagonal">
-	<div class="mine">
-		<img src="{{ SP.DIR_IMAGES }}/eight-mine.jpg" width="850" height="304">
-	</div>
+<section>
+	<h1 class="fragment" data-fragment-index="0">Grammar proof your selectors.</h1>
 
-	<div class="inuit fragment" data-fragment-index="0">
-		<img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286">
+	<div class="mine-and-theirs--diagonal">
+		<div class="first mine">
+			<img src="{{ SP.DIR_IMAGES }}/eight-mine.jpg" width="850" height="304">
+		</div>
+
+		<div class="second inuit fragment" data-fragment-index="0">
+			<img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286">
+		</div>
 	</div>
-</div>
+</section>
 
 
 <aside class="notes">
