--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,13 +1,7 @@
 <h1>Don't be too serious.</h1>
 
+<div class="caffeinated mine">
+	<img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="">
+</div>
+
 https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass
-{{#markdown}}
-	// COLOR SCHEMES
-	$leche: #BBA993
-	$caramel: #CC9966
-	$shit-brown: #330000
-	$craft-red: rgb(238, 64, 55)
-	$dark-red: #660000
-	$satan-grey: #666
-	$tres-gris: #333
-{{/markdown}}
