change color of progress slider

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1>Grammar proof your selectors.</h1>
+	<h1><span class="sol-yellow">1.</span> Grammar proof your selectors.</h1>
 </section>
 
 <section>
