--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1>Use objects for configs.</h1>
+	<h1><span class="sol-yellow">3.</span> Use objects for configs.</h1>
 </section>
 
 <section>
