--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1>Chain import statements.</h1>
+	<h1><span class="sol-yellow">2.</span> Chain import statements.</h1>
 </section>
 
 <section>
