--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1>Use lots of Sass Partials.</h1>
+	<h1><span class="sol-yellow">4.</span> Use lots of Sass Partials.</h1>
 </section>
 
 <section>
