--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1>Check for empty arguments.</h1>
+	<h1><span class="sol-yellow">9.</span> Check for empty arguments.</h1>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
