last couple of slides

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -137,3 +137,4 @@ $inuit-primary: #4a8ec2;
 $toolkit-primary: #ff0065;
 $compass-primary: #fb292d;
 $caffeinatedlabs-primary: #ef4035;
+$bourbon-primary: #fc511d;
