--- a/src/stylesheets/_oocss-utils.scss
+++ b/src/stylesheets/_oocss-utils.scss
@@ -1,3 +1,8 @@
 .sol-green { color: $CYAN; }
 .sol-yellow { color: $YELLOW; }
 .sol-grey  { color: $BASE1; }
+
+.inline-block {
+	display: inline-block;
+	vertical-align: top;
+}
