--- a/src/stylesheets/components/slides/_twenty-one.scss
+++ b/src/stylesheets/components/slides/_twenty-one.scss
@@ -1,10 +1,14 @@
 .twenty-one {
 	p {
-		color: $solarized-grey-text;
 		text-align: left;
 		font-size: 30px;
 		font-family: "Avenir";
 		margin-bottom: .5em;
+	}
+
+	a {
+		color: $solarized-grey-text;
 		text-shadow: 1px 1px 1px $black;
+		text-decoration: none;
 	}
 }
