--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -8,7 +8,7 @@
 	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/fourteen-debug-config-inuit.jpg" width="" height="">
 	</div>
-	<div class="inuit">
+	<div class="inuit no-label">
 		<img src="{{ SP.DIR_IMAGES }}/fourteen-debug-inuit.jpg" width="" height="">
 	</div>
 
