--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -1,5 +1,5 @@
 <section>
-	<h1><span class="sol-yellow">8.</span> Format your mixin parameters<br>so they are <em>easy</em> to read.</h1>
+	<h1><span class="sol-yellow inline-block">8.</span> <span class="inline-block">Format your mixin parameters<br>so they are <em>easy</em> to read.</span></h1>
 </section>
 
 
