--- a/src/templates/slides/twenty.hbs
+++ b/src/templates/slides/twenty.hbs
@@ -1,4 +1,25 @@
-<h1><span class="sol-yellow">10.</span> Throw errors.</h1>
+<section>
+	<h1><span class="sol-yellow">10.</span> Throw errors.</h1>
+</section>
+
+<section>
+	<h1>Throw errors.</h1>
+
+	<div class="bourbon">
+		<img src="{{ SP.DIR_IMAGES }}/twenty-bourbon.jpg" width="" height="">
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="sassy-math fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/twenty-sassy-math.jpg" width="" height="">
+	</div>
+</section>
+
+
+
 
 <aside class="notes">
 	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
