--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -1,15 +1,23 @@
 <section>
-	<h1><span class="sol-yellow">9.</span> Check for empty arguments.</h1>
+	<h1><span class="sol-yellow">9.</span> Check for empty arguments...</h1>
 
-	<aside class="notes">
-		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-	</aside>
+	<div class="toolkit fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height="">
+	</div>
+
 </section>
+
 
 <section>
-	<h1>Predefine parameters with null.</h1>
+	<h1>...or predefine parameters with <code>null</code>.</h1>
+
+	<div class="toolkit fragment" data-fragment-index="0">
+		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
+	</div>
+
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 	</aside>
 </section>
+
