--- a/src/stylesheets/components/_Slide.scss
+++ b/src/stylesheets/components/_Slide.scss
@@ -41,8 +41,12 @@
 .inuit,
 .toolkit,
 .compass,
-.caffeinated {
+.caffeinated,
+.sassy-math,
+.bourbon {
 	position: relative;
+	display: inline-block;
+	
 	&:before {
 		position: absolute;
 		right: 16px;
@@ -50,6 +54,10 @@
 		top: -24px;
 		padding: 2px 6px;
 		color: white;
+	}
+
+	&.no-label:before {
+		display: none;
 	}
 
 	img {
@@ -92,7 +100,18 @@
 
 .toolkit {
 	&:before {
-		content: 'Toolkit';
+		content: 'Team Sass Toolkit';
+		background: $toolkit-primary;
+	}
+
+	img {
+		border-color: $toolkit-primary;
+	}
+}
+
+.sassy-math {
+	&:before {
+		content: 'Team Sass Sassy-math';
 		background: $toolkit-primary;
 	}
 
@@ -120,6 +139,17 @@
 
 	img {
 		border-color: $caffeinatedlabs-primary;
+	}
+}
+
+.bourbon {
+	&:before {
+		content: 'Bourbon';
+		background: $bourbon-primary;
+	}
+
+	img {
+		border-color: $bourbon-primary;
 	}
 }
 
