--- a/src/templates/slides/twenty-one.hbs
+++ b/src/templates/slides/twenty-one.hbs
@@ -1,6 +1,6 @@
 <h1>Read some Framework code.</h1>
 
 <address>
-	<p>elise.chant@gmail.com</p>
-	<p>@elisechant</p>
+	<p><a href="mailto:elise.chant@gmail.com">elise.chant@gmail.com</a></p>
+	<p><a href="http://twitter.com/elisechant">@elisechant</a></p>
 </address>
