mixin libraries are cheap slide

--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -1,5 +1,9 @@
 <section>
-	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap.</h1>
+	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap...</h1>
+
+	<div class="bourbon">
+		<img src="{{ SP.DIR_IMAGES }}/ten-bourbon.jpg" width="" height="">
+	</div>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
@@ -8,7 +12,11 @@
 
 
 <section>
-	<h1>Optionally output CSS.</h1>
+	<h1>.. or optionally output CSS.</h1>
+
+	<div class="foundation">
+		<img src="{{ SP.DIR_IMAGES }}/ten-foundation.jpg" width="" height="">
+	</div>
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
