--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -26,4 +26,5 @@
 	, 'components/slides/nineteen'
 	, 'components/slides/twenty-one'
 	, 'components/slides/five'
+	, 'components/slides/sixteen'
 ;
