--- a/src/templates/slides/four.hbs
+++ b/src/templates/slides/four.hbs
@@ -22,7 +22,7 @@
 </section>
 
 <section>
-	<h1>Access a config object with getters and setters.</h1>
+	<h1>Access the config object with getters and setters.</h1>
 
 	<div class="toolkit">
 		<img src="{{ SP.DIR_IMAGES }}/four-2-config-item-toolkit.jpg" height="" width="">
