--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -3,20 +3,34 @@
 </section>
 
 <section>
-	<h1 class="fragment" data-fragment-index="2">Use lots of Sass Partials.</h1>
+	<h1 class="fragment" data-fragment-index="5">Use lots of Sass Partials.</h1>
 
-	<div class="each-columns">
+	<div class="each-columns--random">
+
 		<div class="each foundation fragment" data-fragment-index="0">
-			<img src="{{ SP.DIR_IMAGES }}/sixteen-foundation.jpg" height="" width="">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-foundation.jpg" height="515" width="310">
 		</div>
 
 		<div class="each bootstrap fragment" data-fragment-index="1">
-			<img src="{{ SP.DIR_IMAGES }}/sixteen-bootstrap.jpg" height="" width="">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-bootstrap.jpg" height="515" width="310">
 		</div>
 
 		<div class="each inuit fragment" data-fragment-index="2">
-			<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="" width="">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="515" width="310">
 		</div>
+
+		<div class="each bourbon fragment" data-fragment-index="3">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-bourbon.jpg" height="515" width="310">
+		</div>
+
+		<div class="each compass fragment" data-fragment-index="5">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-compass.jpg" height="515" width="310">
+		</div>
+
+		<div class="each toolkit fragment" data-fragment-index="4">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-toolkit.jpg" height="515" width="310">
+		</div>
+
 	</div>
 
 </section>
