--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -1,6 +1,8 @@
 <section>
-	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap...</h1>
+	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap</h1>
+</section>
 
+<section>
 	<div class="bourbon">
 		<img src="{{ SP.DIR_IMAGES }}/ten-bourbon.jpg" width="" height="">
 	</div>
@@ -12,8 +14,11 @@
 
 
 <section>
-	<h1>.. or optionally output CSS.</h1>
+	<h1>.. or optionally output CSS</h1>
+</section>
 
+
+<section>
 	<div class="foundation">
 		<img src="{{ SP.DIR_IMAGES }}/ten-foundation.jpg" width="" height="">
 	</div>
