--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,7 +1,12 @@
-<h1>Don't be too serious.</h1>
+<section>
+	<h1><span class="sol-yellow">10½. </span> Don't be too serious.</h1>
+</section>
 
-<div class="caffeinated mine">
-	<img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="">
-</div>
 
-https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass
+<section>
+	<h1>Don't be too serious.</h1>
+	<div class="caffeinated mine">
+		<img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="">
+	</div>
+	<!-- https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass -->
+</section>
