--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -1,17 +1,21 @@
 <section>
-	<h1><span class="sol-yellow">9.</span> Check for empty arguments...</h1>
-
-	<div class="toolkit fragment" data-fragment-index="0">
-		<img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height="">
-	</div>
-
+	<h1><span class="sol-yellow">9.</span> Check for empty arguments</h1>
 </section>
 
 
 <section>
-	<h1>...or predefine parameters with <code>null</code>.</h1>
+	<h1>Check for empty arguments</h1>
 
-	<div class="toolkit fragment" data-fragment-index="0">
+	<div class="toolkit">
+		<img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height="">
+	</div>
+
+	<br>
+	<br>
+	<br>
+	<h1 class="fragment" data-fragment-index="1">...or predefine parameters with <code>null</code>.</h1>
+
+	<div class="toolkit fragment" data-fragment-index="1">
 		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
 	</div>
 
@@ -20,4 +24,5 @@
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 	</aside>
 </section>
+
 
