finish the damn slides

--- a/src/stylesheets/components/_Slide.scss
+++ b/src/stylesheets/components/_Slide.scss
@@ -51,10 +51,11 @@
 		position: absolute;
 		right: 16px;
 		height: 24px;
-		top: -24px;
+		top: -24px - 1px;
 		padding: 2px 6px;
 		color: white;
 	}
+
 
 	&.no-label:before {
 		display: none;
