--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -3,6 +3,9 @@
 		<section class="slide splash">
 			{{> splash }}
 		</section>
+		<section class="slide intro">
+			{{> intro }}
+		</section>
 		<section class="slide eight">
 			{{> eight }}
 		</section>
