--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,9 +1,9 @@
 <section>
-	<h1><span class="sol-yellow">2.</span> Chain import statements.</h1>
+	<h1><span class="sol-yellow">2.</span> Chain your import statements.</h1>
 </section>
 
 <section>
-	<h1 class="fragment" data-fragment-index="1">Chain import statements.</h1>
+	<h1 class="fragment" data-fragment-index="1">Chain your import statements.</h1>
 
 	<div class="mine-and-theirs--diagonal">
 		<div class="first ">
