--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -7,7 +7,7 @@
 
 	<div class="each-columns--random">
 
-		<div class="each foundation fragment" data-fragment-index="0">
+		<div class="each foundation">
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-foundation.jpg" height="515" width="310">
 		</div>
 
