--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -1,28 +1,38 @@
 <section>
-	<h1><span class="sol-yellow">9.</span> Check for empty arguments</h1>
+	<h1><span class="sol-yellow">9.</span> Safe-guard your arguments</h1>
 </section>
 
 
 <section>
-	<h1>Check for empty arguments</h1>
+	<h1>.. check for empty arguments</h1>
 
+	<br>
 	<div class="toolkit">
 		<img src="{{ SP.DIR_IMAGES }}/two-empty-params-toolkit.jpg" width="" height="">
 	</div>
-
-	<br>
-	<br>
-	<br>
-	<h1 class="fragment" data-fragment-index="1">...or predefine parameters with <code>null</code>.</h1>
-
-	<div class="toolkit fragment" data-fragment-index="1">
-		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
-	</div>
-
 
 	<aside class="notes">
 		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 	</aside>
 </section>
 
+
+<section>
+	<h1>.. predefine <em>optional</em> arguments with <code>null</code></h1>
+
+	<br>
+	<div class="toolkit">
+		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
+	</div>
+</section>
+
+
+<section>
+	<h1>.. idiot proof argument order</h1>
+
+	<br>
+	<div class="compass">
+		<img src="{{ SP.DIR_IMAGES }}/two-idiot-compass.jpg" width="" height="">
+	</div>
+</section>
 
