finished the fucking thing

--- a/src/templates/slides/eight.hbs
+++ b/src/templates/slides/eight.hbs
@@ -1,5 +1,9 @@
 <section>
 	<h1><span class="sol-yellow">1.</span> Grammar proof your selectors.</h1>
+
+	<aside class="notes">
+		1. Grammar proof your selectors
+	</aside>
 </section>
 
 <section>
@@ -14,11 +18,14 @@
 			<img src="{{ SP.DIR_IMAGES }}/eight-inuit.jpg" width="638" height="286">
 		</div>
 	</div>
+
+	<aside class="notes">
+		We should all know the pain of debugging typos in selectors? This is something that happens a lot !<br>
+		particularly with weird words like 'grey'<br>
+		So, when you’re writing selectors,<br><strong>NEXT</strong>
+		<strong>Grammar proof your selectors ! like inuit.css</strong><br>
+		Now it's ok if a developer misspells the 'gray' class
+	</aside>
 </section>
 
 
-<aside class="notes">
-	We should all know the pain of debugging typos in selectors? This is something that happens a lot !<br>
-	So, when you’re writing selectors,<br>
-	<strong>Grammar proof your selectors !</strong>
-</aside>
