--- a/src/templates/slides/five.hbs
+++ b/src/templates/slides/five.hbs
@@ -1,5 +1,10 @@
 <section>
 	<h1><span class="sol-yellow">5.</span> Document inline.</h1>
+
+	<aside class="notes">
+		5. Document inline<br>
+		And as our code gets more advanced, this becomes more and more important<br>
+	</aside>
 </section>
 
 
@@ -17,6 +22,12 @@
 	<div class="mine fragment" data-fragment-index="1">
 		<img src="{{ SP.DIR_IMAGES }}/five-bad-comments-element-group-mine.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		CSS is notorious for bad comments, like pointing out the obvious<strong>NEXT</strong><br>
+		or general lack of commenting or bad naming conventions<strong>NEXT</strong><br>
+		or comments that are starting to be helpful but don't convey any semantics<strong>NEXT</strong><br>
+	</aside>
 </section>
 
 
@@ -24,20 +35,31 @@
 	<div class="bootstrap">
 		<img src="{{ SP.DIR_IMAGES }}/five-variables-bootstrap.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		Bootstrap have particularly good commenting<br>
+		They explain things that we need to know like that a value IS deliberately unitless<br>
+		and how what appear to be random values are evaluated
+	</aside>
 </section>
 
 <section>
 	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/five-forms-inuit.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		Inuit use html samples in their doc-blocks to explain some of the semantics of the classes
+	</aside>
 </section>
 
 <section>
 	<div class="inuit">
 		<img src="{{ SP.DIR_IMAGES }}/five-arrows-inuit.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		He also draws pictures to convey information if that can be useful,<br>
+		so we should too
+	</aside>
 </section>
-
-<aside class="notes">
-
-</aside>
