--- a/src/templates/slides/fourteen.hbs
+++ b/src/templates/slides/fourteen.hbs
@@ -19,9 +19,12 @@
 		<img src="{{ SP.DIR_IMAGES }}/fourteen-improved.jpg" width="" height="">
 	</div>
 
+	<aside class="notes">
+		Inuit have a file called debug.scss and by setting "debug-mode" to true, it paints useful things in the browser<br>
+		like outlining elements without alt tags<br>
+		So we could use a debug concept in our code<strong>NEXT</strong>
+		Maybe it would be useful to add borders or background colors to layout elements?<br>
+		we can do things like using the ternary function to add a border if debug is true, or ignore if debug is false
+	</aside>
+
 </section>
-
-
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
