--- a/src/templates/slides/intro.hbs
+++ b/src/templates/slides/intro.hbs
@@ -1,1 +1,24 @@
 <img src="{{ SP.DIR_IMAGES }}/css-grumpy-cat.jpg" width="" height="">
+
+<aside class="notes">
+	The goal of any sizeable codebase is to be things like:
+	<ul>
+		<li>reliable</li>
+		<li>easily extensible</li>
+		<li>and easy to use</li>
+	</ul>
+	<br>
+	And in CSS Codebases, this is very often not the case,<br>
+	and a lot of developers are of the thought that CSS <strong><em>IS horribly</em></strong>
+	unreliable,<br>
+	and not reusable <br>
+	and not easy to use<br>
+	and I guess that's a lot of the reason why other developers historically don't like it.
+	<br>
+	<br>
+	But we've now got CSS preprocessors like Sass, and they're helping us to make our css code more organised and predictable.<br>
+
+	So we need to be writing more Sass  and less CSS, and what I mean by that is that we really need to using all of the features of the language. <br>
+	And like all other languages, we should look in to the Source Code of the Frameworks to find out some best practices, tips and tricks.<br>
+	And these are some that i've found.
+</aside>
