--- a/src/templates/slides/nineteen.hbs
+++ b/src/templates/slides/nineteen.hbs
@@ -15,9 +15,10 @@
 			<img src="{{ SP.DIR_IMAGES }}/nineteen-compass.jpg" height="" width="700">
 		</div>
 	</div>
+
+	<aside class="notes">
+		Don't write mixin parameters in a line<br>
+		and use plenty of space between them <strong>NEXT</strong> so people can quickly read them<br>
+		like Compass do.
+	</aside>
 </section>
-
-
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
