--- a/src/templates/slides/one.hbs
+++ b/src/templates/slides/one.hbs
@@ -1,5 +1,9 @@
 <section>
-	<h1><span class="sol-yellow">2.</span> Chain your import statements.</h1>
+	<h1><span class="sol-yellow">2.</span> You can chain import statements.</h1>
+
+	<aside class="notes">
+		2.  You can chain import statements.
+	</aside>
 </section>
 
 <section>
@@ -22,11 +26,12 @@
 			<img src="{{ SP.DIR_IMAGES }}/one-foundation.jpg" height="" width="800">
 		</div>
 	</div>
+
+
+	<aside class="notes">
+		Something much less annoying, but something always felt wrong about repeating the @import directive.<strong>NEXT</strong><br>
+		It feels much more natural to chain the import, like how you chain JavaScript variables,<strong>NEXT</strong><br>
+		well it turns out you can, Foundation do this<br>
+		<strong>You can chain import statements !</strong>
+	</aside>
 </section>
-
-
-<aside class="notes">
-	It’s less annoying, but something always feels wrong about repeating the @import directive. It feels much more natural to chain the import, like chaining JavaScript variables,<br>
-	well it turns out you can,<br>
-	<strong>Chain import statements !</strong>
-</aside>
