--- a/src/templates/slides/sixteen.hbs
+++ b/src/templates/slides/sixteen.hbs
@@ -1,5 +1,10 @@
 <section>
 	<h1><span class="sol-yellow">4.</span> Use lots of Sass Partials.</h1>
+
+	<aside class="notes">
+		4. Use lots of Sass Partials.<br>
+		This is something I think goes without saying. But so many developers just don't do this.
+	</aside>
 </section>
 
 <section>
@@ -15,16 +20,16 @@
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-bootstrap.jpg" height="515" width="310">
 		</div>
 
-		<div class="each inuit fragment" data-fragment-index="2">
-			<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="515" width="310">
+		<div class="each compass fragment" data-fragment-index="2">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-compass.jpg" height="515" width="310">
 		</div>
 
 		<div class="each bourbon fragment" data-fragment-index="3">
 			<img src="{{ SP.DIR_IMAGES }}/sixteen-bourbon.jpg" height="515" width="310">
 		</div>
 
-		<div class="each compass fragment" data-fragment-index="5">
-			<img src="{{ SP.DIR_IMAGES }}/sixteen-compass.jpg" height="515" width="310">
+		<div class="each inuit fragment" data-fragment-index="5">
+			<img src="{{ SP.DIR_IMAGES }}/sixteen-inuit.jpg" height="515" width="310">
 		</div>
 
 		<div class="each toolkit fragment" data-fragment-index="4">
@@ -33,8 +38,12 @@
 
 	</div>
 
-</section>
 
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
+	<aside class="notes">
+		Foundation do<strong>NEXT</strong><br>
+		Bootstrap do<strong>NEXT</strong><br>
+		Compass does<strong>NEXT</strong><br>
+		Actually everyone does, so we should too<strong>NEXT</strong><br>
+	</aside>
+
+</section>
