--- a/src/templates/slides/ten.hbs
+++ b/src/templates/slides/ten.hbs
@@ -1,5 +1,10 @@
 <section>
 	<h1><span class="sol-yellow">6.</span> Mixin libraries are cheap</h1>
+
+	<aside class="notes">
+		Another one that took me a while to figure out<br>
+		Mixin libraries are cheap!
+	</aside>
 </section>
 
 <section>
@@ -8,13 +13,17 @@
 	</div>
 
 	<aside class="notes">
-		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+		They don't output any CSS. So you can have as many Mixins as you like and unless you use them they won't have an impact on performance
 	</aside>
 </section>
 
 
 <section>
 	<h1>.. or optionally output CSS</h1>
+
+	<aside class="notes">
+		Or some Frameworks provide an option to generate CSS or not like Foundation
+	</aside>
 </section>
 
 
@@ -24,6 +33,6 @@
 	</div>
 
 	<aside class="notes">
-		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+		Foundation use a Boolean switch called "include-html" so we can control what is compiled.
 	</aside>
 </section>
