--- a/src/templates/slides/twenty-two.hbs
+++ b/src/templates/slides/twenty-two.hbs
@@ -1,12 +1,28 @@
 <section>
 	<h1><span class="sol-yellow">10½. </span> Don't be too serious.</h1>
+
+	<aside class="notes">
+		Don't forget we're CSS devs, we don't have to be too serious,
+	</aside>
 </section>
 
 
 <section>
-	<h1>Don't be too serious.</h1>
-	<div class="caffeinated mine">
-		<img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="">
+
+	<div class="mine-and-theirs--diagonal">
+		<div class="first caffeinated">
+			<img src="{{ SP.DIR_IMAGES }}/twenty-two-caffeinatedlabs.jpg" height="" width="800">
+			<!-- https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass -->
+		</div>
+
+		<div class="second fragment" data-fragment-index="1">
+			<img src="{{ SP.DIR_IMAGES }}/twenty-two-mine.jpg" height="" width="750">
+		</div>
 	</div>
-	<!-- https://github.com/caffeinatedlabs/codeblog/blob/master/assets/craftstrap.sass -->
+
+
+	<aside class="notes">
+		So remember sometimes to have fun. <br>
+		And remember that most things get stripped out in the compile so you probably wont get fired.
+	</aside>
 </section>
