--- a/src/templates/slides/two.hbs
+++ b/src/templates/slides/two.hbs
@@ -1,5 +1,10 @@
 <section>
-	<h1><span class="sol-yellow">9.</span> Safe-guard your arguments</h1>
+	<h1><span class="sol-yellow">9.</span> Guard arguments</h1>
+
+	<aside class="notes">
+		If you code is going to be reusable, you should be <br>
+		Guarding your arguments
+	</aside>
 </section>
 
 
@@ -12,7 +17,8 @@
 	</div>
 
 	<aside class="notes">
-		Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+		Check for empty argument with the length function,<br>
+		then you can do something like setting a default value or emitting a warning
 	</aside>
 </section>
 
@@ -24,15 +30,26 @@
 	<div class="toolkit">
 		<img src="{{ SP.DIR_IMAGES }}/two-null-toolkit.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		Predefine optional arguments with null<br>
+		this could be a good way of turning off a feature in your mixin
+	</aside>
 </section>
 
 
 <section>
-	<h1>.. idiot proof argument order</h1>
+	<h1>.. guard argument order</h1>
 
 	<br>
 	<div class="compass">
 		<img src="{{ SP.DIR_IMAGES }}/two-idiot-compass.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		Guard argument order like Compass<br>
+		The point there are many controls that we have available to us in our mixins<br>
+		so why don't we use them more?
+	</aside>
 </section>
 
