--- a/src/templates/slides/twenty.hbs
+++ b/src/templates/slides/twenty.hbs
@@ -16,11 +16,10 @@
 	<div class="sassy-math fragment" data-fragment-index="0">
 		<img src="{{ SP.DIR_IMAGES }}/twenty-sassy-math.jpg" width="" height="">
 	</div>
+
+	<aside class="notes">
+		Bourbon use errors to give deprecating warnings<br>
+		Sassy-math use errors to emit type warnings and then use @return false to exit the function.
+	</aside>
+
 </section>
-
-
-
-
-<aside class="notes">
-	Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-</aside>
